--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,9 +87,6 @@ button:active {
     white-space: nowrap;
 }
 
-
-
-
 /* Loading Screen */
 #loading-screen {
     position: absolute;
@@ -487,6 +484,10 @@ button:active {
     margin: 0.625rem;
 }
 
+.class-display-option {
+    height: 95%;
+}
+
 .class-item-box {
     height: 90%;
     display: flex;
@@ -507,18 +508,16 @@ button:active {
 
 /* Reward Section */
 .reward-title {
-    font-size: 0.7rem;
+    font-size: 1rem;
+    text-align: center;
 }
 
 .class-description,
 .reward-description {
-    font-size: 0.8rem;
-    color: #d4d4d4;
+    font-size: 1rem;
+    color: #e1e1e1;
     text-align: center;
     padding: 0.438rem 0;
-}
-
-.reward-description {
     overflow-y: scroll;
 }
 
@@ -585,16 +584,6 @@ button {
     transition: color 0.3s ease;
 }
 
-/* Responsive Design */
-@media (max-width: 600px) {
-    #main-footer {
-        width: 100vw;
-        margin-top: 1rem;
-        border-radius: 0px;
-    }
-}
-
-
 /* Hide Items */
 .hidden {
     display: none;
@@ -632,6 +621,11 @@ button {
         /* Damit es wirklich in der Mitte bleibt */
     }
 
+    #loading-screen {
+        width: 99%;
+        height: 99%;
+
+    }
 
     #middle-item {
         flex-grow: 1;
@@ -711,6 +705,11 @@ button {
         min-width: 70px;
     }
 
+    .reward-title {
+        font-size: 0.9rem;
+        padding: 0;
+    }
+
     button {
         font-size: 1rem;
         padding: 0.6rem 1.2rem;
@@ -759,11 +758,17 @@ button {
     .class-description {
         overflow-y: scroll;
     }
+
+    #main-footer {
+        width: 100vw;
+        margin-top: 1rem;
+        border-radius: 0px;
+    }
 }
 
 @media only screen and (max-width: 410px) {
     .class-display-option {
-        height: 100%;
+        height: 95%;
         margin: 0.3rem;
     }
 
@@ -771,6 +776,10 @@ button {
         height: 100%;
     }
 
+    .reward-display-option {
+        width: 34%;
+        margin: 0.3rem;
+    }
 
     .button-box {
         justify-content: center;
