--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -794,7 +794,7 @@ button {
     }
 }
 
-@media only screen and (max-width: 370) {
+@media only screen and (max-width: 370px) {
     .class-item-box {
         justify-content: center;
         gap: 8px;
@@ -802,9 +802,31 @@ button {
 
     .class-display-option {
         width: 30%;
+        margin: 0.2rem;
     }
 
     .button-box-flex-row {
         gap: 0.2rem;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .class-item-box {
+        justify-content: center;
+        gap: 0;
+    }
+
+    .class-display-option {
+        width: 30%;
+        margin: 0.1rem;
+    }
+
+    .monster-image {
+        width: 100%;
+        height: 65%;
+    }
+
+    button {
+        padding: 0.6rem 0.9rem;
     }
 }
